# ghostd

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
assets/: index.html  script.ts
examples/: single-thread.rs  timer.rs
src/: api.rs  expiration_checker.rs  handler.rs  index.html  main.rs  script.js  server.rs  state.rs  style.css  timeout.rs  tmp_state.rs
src/assets/: index.html  script.js  script.ts  style.css
src/server/: mod.rs  request.rs
