[package]
name = "ghostd"
version = "0.3.6"
authors = ["John Teske <john.teske@protonmail.com>"]
description = "shared clipboard server/UI"
publish = false
edition = "2018"

[dependencies]
hyper = { version = "0.14.4", features = ["full"] }
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
urlencoding = "1.1.1"
