[package]
name = "ghostd"
version = "0.3.6"
authors = ["John Teske <john.teske@protonmail.com>"]
description = "shared clipboard server/UI"
publish = false
edition = "2018"

[dependencies]
bytes = "1.0.1"
tokio = { version = "1.4.0", features = ["full"] }
warp = "0.3.1"

[build-dependencies]
urlencoding = "1.1.1"
